# src/main/java/io/github/mateusz00/rest/AccountsApiController.java
@@ -7,6 +7,8 @@ import org.springframework.web.bind.annotation.RestController;
 import io.github.mateusz00.api.AccountsApi;
 import io.github.mateusz00.entity.User;
 import io.github.mateusz00.model.AccountRegistration;
+import io.github.mateusz00.model.PasswordResetRequest;
+import io.github.mateusz00.model.PasswordResetTokenRequest;
 import io.github.mateusz00.service.TokenService;
 import io.github.mateusz00.service.UserService;
 import jakarta.servlet.http.HttpServletResponse;
@@ -21,10 +23,22 @@ public class AccountsApiController implements AccountsApi
     private final TokenService tokenService;
 
     @Override
+    public ResponseEntity<Void> createPasswordResetToken(PasswordResetTokenRequest passwordResetTokenRequest)
+    {
+        return null; // TODO
+    }
+
+    @Override
     public ResponseEntity<Void> registerNewAccount(AccountRegistration accountRegistration)
     {
         User user = userService.registerUser(accountRegistration);
         response.addHeader(HttpHeaders.AUTHORIZATION, tokenService.createToken(user.getUsername(), user.getGrantedAuthorities()));
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<Void> verifyPasswordResetToken(PasswordResetRequest passwordResetRequest)
+    {
+        return null; // TODO
     }
 }
